crates/utils/re_gpu_video/src/vulkan/av1/snapshots/re_gpu_video__vulkan__av1__tests__alt_ref.snap
---
source: crates/utils/re_gpu_video/src/vulkan/av1/tests.rs
expression: "trace_fixture(\"alt_ref\")"
---
# TU 0
ParametersChanged
DecodeFrame { picture 0, order hint 0, key, slot 0 }
# TU 1
DecodeFrame { picture 1, order hint 16, slot 1, not shown, refs: [slot 0 (order hint 0)], names: [0, 0, 0, 0, 0, 0, 0] }
DecodeFrame { picture 2, order hint 8, slot 2, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16)], names: [0, 0, 0, 0, 1, 0, 0] }
DecodeFrame { picture 3, order hint 4, slot 3, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8)], names: [0, 0, 0, 0, 2, 0, 1] }
DecodeFrame { picture 4, order hint 2, slot 4, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4)], names: [0, 0, 0, 0, 3, 2, 1] }
DecodeFrame { picture 5, order hint 1, slot 5, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 4 (order hint 2)], names: [0, 0, 2, 0, 4, 3, 1] }
# TU 2
ShowExisting { picture 4 }
# TU 3
DecodeFrame { picture 6, order hint 3, slot 6, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 4 (order hint 2), slot 5 (order hint 1)], names: [4, 5, 0, 0, 3, 2, 1] }
# TU 4
ShowExisting { picture 3 }
# TU 5
DecodeFrame { picture 7, order hint 6, slot 7, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 4 (order hint 2), slot 5 (order hint 1), slot 6 (order hint 3)], names: [3, 6, 4, 0, 2, 5, 1] }
DecodeFrame { picture 8, order hint 5, slot 8, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 4 (order hint 2), slot 6 (order hint 3), slot 7 (order hint 6)], names: [3, 6, 4, 0, 7, 2, 1], evicted: [5] }
# TU 6
ShowExisting { picture 7 }
# TU 7
DecodeFrame { picture 9, order hint 7, slot 5, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 6 (order hint 3), slot 7 (order hint 6), slot 8 (order hint 5)], names: [7, 8, 3, 0, 2, 6, 1], evicted: [4] }
# TU 8
ShowExisting { picture 2 }
# TU 9
DecodeFrame { picture 10, order hint 12, slot 4, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 4), slot 5 (order hint 7), slot 7 (order hint 6), slot 8 (order hint 5)], names: [2, 5, 7, 0, 8, 3, 1], evicted: [6] }
DecodeFrame { picture 11, order hint 10, slot 6, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 4 (order hint 12), slot 5 (order hint 7), slot 7 (order hint 6), slot 8 (order hint 5)], names: [2, 5, 7, 0, 4, 8, 1], evicted: [3] }
DecodeFrame { picture 12, order hint 9, slot 3, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 4 (order hint 12), slot 5 (order hint 7), slot 6 (order hint 10), slot 7 (order hint 6)], names: [2, 5, 7, 0, 6, 4, 1], evicted: [8] }
# TU 10
ShowExisting { picture 11 }
# TU 11
DecodeFrame { picture 13, order hint 11, slot 8, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 9), slot 4 (order hint 12), slot 5 (order hint 7), slot 6 (order hint 10)], names: [6, 3, 2, 0, 4, 5, 1], evicted: [7] }
# TU 12
ShowExisting { picture 10 }
# TU 13
DecodeFrame { picture 14, order hint 14, slot 7, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 8), slot 3 (order hint 9), slot 4 (order hint 12), slot 6 (order hint 10), slot 8 (order hint 11)], names: [4, 8, 6, 0, 3, 2, 1], evicted: [9] }
DecodeFrame { picture 15, order hint 13, slot 5, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 3 (order hint 9), slot 4 (order hint 12), slot 6 (order hint 10), slot 7 (order hint 14), slot 8 (order hint 11)], names: [4, 8, 6, 0, 7, 3, 1], evicted: [2] }
# TU 14
ShowExisting { picture 14 }
# TU 15
DecodeFrame { picture 16, order hint 15, slot 2, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 4 (order hint 12), slot 5 (order hint 13), slot 6 (order hint 10), slot 7 (order hint 14), slot 8 (order hint 11)], names: [7, 5, 4, 0, 8, 6, 1], evicted: [12] }
# TU 16
DecodeFrame { picture 17, order hint 16, slot 3, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 4 (order hint 12), slot 5 (order hint 13), slot 7 (order hint 14), slot 8 (order hint 11)], names: [2, 7, 5, 0, 4, 8, 1] }
# TU 17
DecodeFrame { picture 18, order hint 23, slot 3, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 4 (order hint 12), slot 5 (order hint 13), slot 7 (order hint 14), slot 8 (order hint 11)], names: [2, 7, 5, 1, 4, 8, 0], evicted: [11] }
DecodeFrame { picture 19, order hint 19, slot 6, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 3 (order hint 23), slot 4 (order hint 12), slot 5 (order hint 13), slot 7 (order hint 14)], names: [2, 7, 5, 1, 4, 0, 3], evicted: [13] }
DecodeFrame { picture 20, order hint 17, slot 8, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 3 (order hint 23), slot 5 (order hint 13), slot 6 (order hint 19), slot 7 (order hint 14)], names: [2, 7, 5, 1, 6, 0, 3], evicted: [10] }
# TU 18
DecodeFrame { picture 21, order hint 18, slot 4, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 3 (order hint 23), slot 6 (order hint 19), slot 7 (order hint 14), slot 8 (order hint 17)], names: [8, 2, 7, 1, 6, 0, 3], evicted: [15] }
# TU 19
ShowExisting { picture 19 }
# TU 20
DecodeFrame { picture 22, order hint 21, slot 5, held back, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 2 (order hint 15), slot 3 (order hint 23), slot 4 (order hint 18), slot 6 (order hint 19), slot 8 (order hint 17)], names: [6, 4, 8, 1, 2, 0, 3], evicted: [14] }
DecodeFrame { picture 23, order hint 20, slot 7, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 3 (order hint 23), slot 4 (order hint 18), slot 5 (order hint 21), slot 6 (order hint 19), slot 8 (order hint 17)], names: [6, 4, 8, 1, 5, 0, 3], evicted: [16] }
# TU 21
ShowExisting { picture 22 }
# TU 22
DecodeFrame { picture 24, order hint 22, slot 2, refs: [slot 0 (order hint 0), slot 1 (order hint 16), slot 3 (order hint 23), slot 4 (order hint 18), slot 5 (order hint 21), slot 6 (order hint 19), slot 7 (order hint 20)], names: [5, 7, 6, 1, 4, 0, 3], evicted: [20] }
# TU 23
ShowExisting { picture 18 }
